--- a/watchface.kv
+++ b/watchface.kv
@@ -1,11 +1,23 @@
 #:kivy 1.10.1
 #:import utils kivy.utils
+#: import app kivy.app
+#: import label kivy.uix.label
+#: import Image kivy.uix.image
+#: import Button kivy.uix.button
+#: import Widget kivy.uix.widget
+#: import RelativeLayout kivy.uix.relativelayout
+#: import Clock kivy.clock
+#: import Window kivy.core.window
+#: import Labelbase kivy.core.text
+#: import FontContextManager kivy.core.text
+#: import Builder kivy.lang
+#: import Config kivy.config
+#: import Rectangle kivy.graphics
 
-# <WatchFace>
-#      BoxLayout:
+# <WatchWidget>
+#     RelativeLayout:
 #         orientation: 'vertical'
-#         canvas.before:
-#             Rectangle:
-#                 pos: self.pos
-#                 size: self.size
-#                 source: 'bgkd_test.png'
+#         Image:
+#             pos: self.pos
+#             size: self.size
+#             source: 'bkgd_test_gif.gif'
